<resources>
    <string name="app_name">linea-rapida</string>
    <string name="logo_description">Linea Rápida logotype.</string>
    <string name="email_edit_text">Correo electrónico</string>
    <string name="passwrod_edit_text">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="get_help">Obtén ayuda</string>
    <string name="title_activity_case_management">CaseManagementActivity</string>
    <string name="title_case_management_app">Gestión de Casos</string>
    <string name="tab_text_1">Lista de Casos</string>
    <string name="tab_text_2">Mapa</string>
    <string name="forgot_password_header">CONTRASEÑA OLVIDADA</string>
    <string name="forgot_password_title">Restablecimiento de contraseña</string>
    <string name="forgot_password_cuerpo_text">Ingresa tu correo para recuperar contraseña</string>
    <string name="send">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_email_error">Porfavor añade un correo electrónico.</string>
    <string name="no_password_error">Porfavor añade un tú contraseña.</string>
    <string name="profile_title">PERFIL</string>
</resources>